--- a/gamemodes.html
+++ b/gamemodes.html
@@ -14,7 +14,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="gamemodes.html">Game Modes</a></li>
+				<li><a class="active" href="gamemodes.html">Game Modes</a></li>
 				<li><a href="majorchampionships.html">Major</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 			</ul>
