--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="gamemodes.html">Game Modes</a></li>
 				<li><a href="majorchampionships.html">Major</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
+				<li><a class="active" href="gallery.html">Gallery</a></li>
 			</ul>
 		</nav>
 	</header>
