--- a/majorchampionships.html
+++ b/majorchampionships.html
@@ -15,7 +15,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="gamemodes.html">Game Modes</a></li>
-				<li><a href="majorchampionships.html">Major</a></li>
+				<li><a class="active" href="majorchampionships.html">Major</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 			</ul>
 		</nav>
